<?php

namespace Jepi\Fw\Controller;

use Jepi\Fw\Controller\Models;
use Jepi\Fw\Controller\Views;

/**
 * Controller.php
 *
 * @package     JepiFW
 * @author      Jepi Humet Alsius <jepihumet@gmail.com>
 * @link        http://jepihumet.com
 */
class Controller implements ControllerInterface {

    protected $routing;
    protected $session;


    public function __construct() {
        
    }

}
