<?php
/**
 * ConfigException.php
 *
 * @package     JepiFW
 * @author      Jepi Humet Alsius <jepihumet@gmail.com>
 * @link        http://jepihumet.com
 */

namespace Jepi\Fw\Exceptions;


class ConfigException extends JepiException
{
    protected $exceptionType = "Config Exception";
}