<?php
/**
 * StorageException.php
 *
 * @package     JepiFW
 * @author      Jepi Humet Alsius <jepihumet@gmail.com>
 * @link        http://jepihumet.com
 */

namespace Jepi\Fw\Exceptions;


class IOException extends JepiException
{
    protected $exceptionType = "IO Exception";
}