<?php
/**
 * RouterException.php
 *
 * @package     JepiFW
 * @author      Jepi Humet Alsius <jepihumet@gmail.com>
 * @link        http://jepihumet.com
 */

namespace Jepi\Fw\Exceptions;


class ModelException extends JepiException
{
    protected $exceptionType = "Model Exception";
}