<?php
/**
 * RouterException.php
 *
 * @package     JepiFW
 * @author      Jepi Humet Alsius <jepihumet@gmail.com>
 * @link        http://jepihumet.com
 */

namespace Jepi\Fw\Exceptions;


class RouterException extends JepiException
{
    protected $exceptionType = "Routing Exception";
}